--- a/services/custom_software.html
+++ b/services/custom_software.html
@@ -415,94 +415,95 @@
   </main>
   <!-- End #main -->
 
-    <!-- ======= Footer ======= -->
-    <footer id="footer">
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
 
-      <!-- <div class="footer-newsletter">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-6">
-              <h4>Join Our Newsletter</h4>
-              <p></p>
-              <form action="" method="post">
-                <input type="email" name="email"><input type="submit" value="Subscribe">
-              </form>
-            </div>
-          </div>
-        </div>
-      </div> -->
-  
-      <div class="footer-top">
-        <div class="container">
-          <div class="row">
-  
-            <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Linespace<span></span></h3>
-              <p>
-                <strong>Call:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a>, <a href="tel:+268-7943-5667">+268-7943-5667</a><br>
-                <strong>Email:</strong> info@linespacesoftware.com<br>
-              </p>
-            </div>
-  
-            <div class="col-lg-3 col-md-6 footer-links">
-              <h4>Useful Links</h4>
-              <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="../#about">About</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="../#featured-services">Services</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="../open-source/open-source.html">Open Source</a></li>
-              </ul>
-            </div>
-  
-            <div class="col-lg-3 col-md-6 footer-links">
-              <h4>Our Services</h4>
-              <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Custom Software Development</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="consulting_and_advisory.html">Consulting and Advisory</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="managed_services.html">Managed Services</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="data_and_analytics.html">Data and Analytics</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="digital_transformation.html">Digital Transformation</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="cybersecurity.html">Cybersecurity</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="training_and_support.html">Training and Support</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="emerging_technologies.html">Emerging Technologies</a></li>
-              </ul>
-            </div>
-  
-            <div class="col-lg-3 col-md-6 footer-links">
-              <h4>Our Social Networks</h4>
-              <p>Reliable solutions for complex organization challenges.</p>
-              <div class="social-links mt-3">
-                <a href="https://github.com/linespacesoftware/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-                <a href="https://www.linkedin.com/company/103179901/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                <a href="https://www.x.com/linespacesoftware/" target="_blank" class="Twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="https://www.facebook.com/profile.php?id=61559912188835&mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="https://www.instagram.com/linespacesoftware/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-              </div>
-            </div>
-  
+    <!-- <div class="footer-newsletter">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-6">
+            <h4>Join Our Newsletter</h4>
+            <p></p>
+            <form action="" method="post">
+              <input type="email" name="email"><input type="submit" value="Subscribe">
+            </form>
           </div>
         </div>
       </div>
-  
-      <div class="container py-4">
-        <div class="copyright">
-          Copyright &copy;2024 <span>Linespace Software</span>. All Rights Reserved. 
-        </div>
-        <br/>
-        <div class="copyright">
-          <span>Registered in the Kingdom of Eswatini</span>.
-        </div>
-        <div class="credits">
-          <a href="../legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
-          <a href="../legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
-          <a href="../legal/cookies.html">Cookies</a>&nbsp;&nbsp;
-          <a href="../legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
+    </div> -->
+
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6 footer-contact">
+            <h3>Linespace<span></span></h3>
+            <p>
+              We specialize in creating tailored software solutions that meet the unique needs of individuals, businesses, and organizations. Our mission is to empower our clients with cutting-edge technology and exceptional service.<br><br>
+              <strong>Email:</strong> <a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a><br>
+              <strong>Call:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a> | <a href="tel:+268-7943-5667">+268-7943-5667</a><br>
+              <strong>Chat:</strong> <a href="https://wa.me/26879255469">+268-7925-5469</a><br>
+
+            </p>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="../index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">About</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#featured-services">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="open-source/open-source.html">Open Source</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Our Services</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Custom Software Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/consulting_and_advisory.html">Consulting and Advisory</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/managed_services.html">Managed Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/data_and_analytics.html">Data and Analytics</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/digital_transformation.html">Digital Transformation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/cybersecurity.html">Cybersecurity</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/training_and_support.html">Training and Support</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/emerging_technologies.html">Emerging Technologies</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Our Social Networks</h4>
+            <div class="social-links mt-3">
+              <a href="https://github.com/linespacesoftware/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+              <a href="https://www.linkedin.com/company/linespacesoftware/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://x.com/linespacesoft" target="_blank" class="Twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61559912188835&mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.instagram.com/linespacesoftware/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+            </div>
+          </div>
+
         </div>
       </div>
+    </div>
 
-    </footer>
-    <!-- End Footer -->
+    <div class="container py-4">
+      <div class="copyright">
+        Copyright &copy;2024 <span>Linespace Software</span>. All Rights Reserved. 
+      </div>
+      <br/>
+      <div class="copyright">
+        <span>Registered in the Kingdom of Eswatini</span>.
+      </div>
+      <div class="credits">
+        <a href="legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
+        <a href="legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
+        <a href="legal/cookies.html">Cookies</a>&nbsp;&nbsp;
+        <a href="legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
+      </div>
+    </div>
+  </footer>
+  <!-- End Footer -->
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
