--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://github.com/linespacesoftware/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/company/103179901/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://www.x.com/linespacesoftware/" target="_blank" class="Twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.linkedin.com/company/linespacesoftware/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://x.com/linespacesoft" target="_blank" class="Twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/profile.php?id=61559912188835&mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/linespacesoftware/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
@@ -80,6 +80,7 @@
               <li><a href="open-source/rabbit.html">Rabbit</a></li>
             </ul>
           </li>
+          <li><a class="nav-link scrollto " href="#partners">Partners</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -560,7 +561,7 @@
     </section>End Testimonials Section --> 
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <!-- <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -571,9 +572,9 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <!-- <li data-filter=".filter-app">App</li>
+              <li data-filter=".filter-app">App</li>
               <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li> -->
+              <li data-filter=".filter-web">Web</li>
             </ul>
           </div>
         </div>
@@ -603,8 +604,49 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
     <!-- End Portfolio Section -->
+
+      <!-- ======= Trusted Partners Section ======= -->
+      <section id="partners" class="contact">
+        <div class="container" data-aos="fade-up">
+  
+          <div class="section-title">
+            <h2>Trusted Partners</h2>
+          </div>
+          <div class="row">
+            <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
+              <img src="#" class="img-fluid" alt="">
+            </div>
+            <div class="col-lg-8">
+              <div class="portfolio-details-slider swiper">
+                <div class="swiper-wrapper align-items-center">
+  
+                  <div class="swiper-slide">
+                    <a href="https://cloud.google.com/" target="_blank"><img src="assets/img/partners/google-cloud.webp" alt="Google Cloud" style="width: 30%;"></a>
+                  </div>
+  
+                  <div class="swiper-slide">
+                    <a href="https://cloud.google.com/" target="_blank"><img src="assets/img/partners/google-cloud.webp" alt="Google Cloud" style="width: 30%;"></a>
+                  </div>
+  
+                  <div class="swiper-slide">
+                    <a href="https://cloud.google.com/" target="_blank"><img src="assets/img/partners/google-cloud.webp" alt="Google Cloud" style="width: 30%;"></a>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <a href="https://cloud.google.com/" target="_blank"><img src="assets/img/partners/google-cloud.webp" alt="Google Cloud" style="width: 30%;"></a>
+                  </div>
+  
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
+  
+        </div>
+      </section>
+      <!-- End About Section -->
 
     <!-- ======= Pricing Section ======= -->
     <!-- <section id="pricing" class="pricing">
@@ -835,25 +877,25 @@
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-6">
             <div class="info-box mb-4">
-              <i class="bx bx-map"></i>
-              <h3>Address</h3>
-              <p>Remote</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
-              <h3>Email Us</h3>
+              <h3>Email</h3>
               <p>info@linespacesoftware.com</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="info-box  mb-4">
-              <i class="bx bx-phone-call"></i>
-              <h3>Call Us</h3>
-              <p><a href="tel:+268-7683-6426">+268-7683-6426</a>, <a href="tel:+268-7943-5667">+268-7943-5667</a></p>
+              <i class="bx bx-envelope"></i>
+              <h3>Call</h3>
+              <p><a href="tel:+268-7683-6426">+268-7683-6426</a> | <a href="tel:+268-7943-5667">+268-7943-5667</a></p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="info-box  mb-4">
+              <i class="bx bx-chat"></i>
+              <h3>Chat</h3>
+              <p><a href="https://wa.me/26879255469">+268-7925-5469</a></p>
             </div>
           </div>
 
@@ -924,8 +966,10 @@
             <h3>Linespace<span></span></h3>
             <p>
               We specialize in creating tailored software solutions that meet the unique needs of individuals, businesses, and organizations. Our mission is to empower our clients with cutting-edge technology and exceptional service.<br><br>
-              <strong>Call:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a>, <a href="tel:+268-7943-5667">+268-7943-5667</a><br>
-              <strong>Email:</strong> info@linespacesoftware.com<br>
+              <strong>Email:</strong> <a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a><br>
+              <strong>Call:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a> | <a href="tel:+268-7943-5667">+268-7943-5667</a><br>
+              <strong>Chat:</strong> <a href="https://wa.me/26879255469">+268-7925-5469</a><br>
+
             </p>
           </div>
 
@@ -958,8 +1002,8 @@
             <h4>Our Social Networks</h4>
             <div class="social-links mt-3">
               <a href="https://github.com/linespacesoftware/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-              <a href="https://www.linkedin.com/company/103179901/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              <a href="https://www.x.com/linespacesoftware/" target="_blank" class="Twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="https://www.linkedin.com/company/linespacesoftware/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://x.com/linespacesoft" target="_blank" class="Twitter"><i class="bx bxl-twitter"></i></a>
               <a href="https://www.facebook.com/profile.php?id=61559912188835&mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="https://www.instagram.com/linespacesoftware/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
             </div>
