--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
               <li><a href="services/exampad.html">Exampad</a></li>
             </ul>
           </li> -->
+          <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="products/gradebook.html">Gradebook</a></li>
+            </ul>
+          </li>
           <li class="dropdown"><a href="#featured-services"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="services/custom_software.html">Custom Software Development</a></li>
