[FIX] Formspree API

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto " href="#partners">Partners</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+          <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -988,7 +988,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="https://formspree.io/f/xrbzpelg" method="POST" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/xpwarwan" method="POST" role="form" class="php-email-form">
               <div class="row">
                 <div class="col form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
