--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </li> -->
           <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="products/gradebook.html">Gradebook</a></li>
+              <li><a href="#">Gradebook</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#featured-services"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
@@ -89,7 +89,7 @@
           <li class="dropdown"><a href="open-source/open-source.html"><span>Open Source</span> <i
                 class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="open-source/rabbit.html">Rabbit</a></li>
+              <li><a href="#">Rabbit</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto " href="#partners">Partners</a></li>
