[FIX] Broken links

--- a/services/custom_software.html
+++ b/services/custom_software.html
@@ -41,10 +41,9 @@
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://github.com/linespacesoftware/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/company/103179901/" target="_blank" class="linkedin"><i
+        <a href="https://www.linkedin.com/company/linespacesoftware/" target="_blank" class="linkedin"><i
             class="bx bxl-linkedin"></i></a>
-        <a href="https://www.x.com/linespacesoftware/" target="_blank" class="Twitter"><i
-            class="bx bxl-twitter"></i></a>
+        <a href="https://x.com/linespacesoft" target="_blank" class="Twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/profile.php?id=61559912188835&mibextid=ZbWKwL" target="_blank"
           class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/linespacesoftware/" target="_blank" class="instagram"><i
@@ -63,7 +62,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="../index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="../index.html#about">About</a></li>
           <!-- <li class="dropdown"><a href="#services"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="services/exampad.html">Exampad</a></li>
@@ -77,23 +76,22 @@
           <li class="dropdown"><a href="#featured-services"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Custom Software Development</a></li>
-              <li><a href="services/consulting_and_advisory.html">Consulting and Advisory</a></li>
-              <li><a href="services/managed_services.html">Managed Services</a></li>
-              <li><a href="services/data_and_analytics.html">Data and Analytics</a></li>
-              <li><a href="services/digital_transformation.html">Digital Transformation</a></li>
-              <li><a href="services/cybersecurity.html">Cybersecurity</a></li>
-              <li><a href="services/training_and_support.html">Training and Support</a></li>
-              <li><a href="services/devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></li>
-              <li><a href="services/emerging_technologies.html">Emerging Technologies</a></li>
+              <li><a href="consulting_and_advisory.html">Consulting and Advisory</a></li>
+              <li><a href="managed_services.html">Managed Services</a></li>
+              <li><a href="data_and_analytics.html">Data and Analytics</a></li>
+              <li><a href="digital_transformation.html">Digital Transformation</a></li>
+              <li><a href="cybersecurity.html">Cybersecurity</a></li>
+              <li><a href="training_and_support.html">Training and Support</a></li>
+              <li><a href="devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></li>
+              <li><a href="emerging_technologies.html">Emerging Technologies</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="open-source/open-source.html"><span>Open Source</span> <i
-                class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Open Source</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Rabbit</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto " href="#partners">Partners</a></li>
+          <li><a class="nav-link scrollto " href="../index.html#partners">Partners</a></li>
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -132,7 +130,7 @@
           <h2>Custom Software Development</h2>
           <ol>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="../#featured-services">Services</a></li>
+            <li><a href="../index.html#featured-services">Services</a></li>
             <li>Custom Software Development</li>
           </ol>
         </div>
@@ -506,9 +504,9 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="../index.html">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#about">About</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#featured-services">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="open-source/open-source.html">Open Source</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="../index.html#about">About</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="../index.html/#featured-services">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Open Source</a></li>
             </ul>
           </div>
 
@@ -517,19 +515,19 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Custom Software
                   Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/consulting_and_advisory.html">Consulting and
+              <li><i class="bx bx-chevron-right"></i> <a href="consulting_and_advisory.html">Consulting and
                   Advisory</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/managed_services.html">Managed Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/data_and_analytics.html">Data and Analytics</a>
+              <li><i class="bx bx-chevron-right"></i> <a href="managed_services.html">Managed Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="data_and_analytics.html">Data and Analytics</a>
               </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/digital_transformation.html">Digital
+              <li><i class="bx bx-chevron-right"></i> <a href="digital_transformation.html">Digital
                   Transformation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/cybersecurity.html">Cybersecurity</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/training_and_support.html">Training and
+              <li><i class="bx bx-chevron-right"></i> <a href="cybersecurity.html">Cybersecurity</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="training_and_support.html">Training and
                   Support</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/devops_and_cloud_infrastructure.html">DevOps and
+              <li><i class="bx bx-chevron-right"></i> <a href="devops_and_cloud_infrastructure.html">DevOps and
                   Cloud Infrastructure</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/emerging_technologies.html">Emerging
+              <li><i class="bx bx-chevron-right"></i> <a href="emerging_technologies.html">Emerging
                   Technologies</a></li>
             </ul>
           </div>
@@ -562,10 +560,10 @@
         <span>Registered in the Kingdom of Eswatini</span>.
       </div>
       <div class="credits">
-        <a href="legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
-        <a href="legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
-        <a href="legal/cookies.html">Cookies</a>&nbsp;&nbsp;
-        <a href="legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
+        <a href="../legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
+        <a href="../legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
+        <a href="../legal/cookies.html">Cookies</a>&nbsp;&nbsp;
+        <a href="../legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
       </div>
     </div>
   </footer>
