--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
             <div class="info-box mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email</h3>
-              <p>info@linespacesoftware.com</p>
+              <p><a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a></p>
             </div>
           </div>
 
@@ -1119,7 +1119,7 @@
         <a href="legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
         <a href="legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
         <a href="legal/cookies.html">Cookies</a>&nbsp;&nbsp;
-            <a href="legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
+        <a href="legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
       </div>
     </div>
   </footer>
