--- a/legal/terms-of-service.html
+++ b/legal/terms-of-service.html
@@ -453,8 +453,8 @@
                 <span>Registered in the Kingdom of Eswatini</span>.
             </div>
             <div class="credits">
-                <a href="#">Privacy Policy</a>&nbsp;&nbsp;
-                <a href="terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
+                <a href="privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
+                <a href="#">Terms of Service</a>&nbsp;&nbsp;
                 <a href="cookies.html">Cookies</a>&nbsp;&nbsp;
                 <a href="paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
             </div>
