--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
+  <!-- Domain Search Form -->
+  <link rel="stylesheet" type="text/css"
+    href="https://secure.duoservers.com/tld-search/api-search.css?color=0000ff&width=700" />
+
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
@@ -112,6 +116,7 @@
             </ul>
           </li> -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="https://us.cloudlogin.co/login/">Client Login</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
@@ -1045,12 +1050,17 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Linespace<span></span></h3>
             <p>
-              We specialize in creating tailored software solutions that meet the unique needs of individuals,
-              businesses, and organizations. Our mission is to empower our clients with cutting-edge technology and
-              exceptional service.<br><br>
+              We are a web services company specialising in creating tailored software solutions to meet the unique
+              needs of individuals, businesses, and organizations. Our mission is to empower our clients with
+              cutting-edge technology and exceptional service.<br><br>
               <strong>Email:</strong> <a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a><br>
-              <strong>Call:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a> | <a
+              <strong>Eswatini:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a> | <a
                 href="tel:+268-7943-5667">+268-7943-5667</a><br>
+              <strong>United States:</strong> <a href="tel: +1-855-211-0932">+1-855-211-0932</a><br>
+              <strong>United States (Toll Free):</strong> <a href="tel: +1-727-546-HOST(4678)">+1-727-546-HOST
+                (4678)</a><br>
+              <strong>United Kingdom:</strong> <a href="tel: +44-20-3695-1294">+44-20-3695-1294</a><br>
+              <strong>Australia:</strong> <a href="tel: +44-20-3695-1294">+61-2-8417-2372</a><br>
               <strong>Chat:</strong> <a href="https://wa.me/26879255469">+268-7925-5469</a><br>
 
             </p>
@@ -1120,6 +1130,8 @@
         <a href="legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
         <a href="legal/cookies.html">Cookies</a>&nbsp;&nbsp;
         <a href="legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
+        <a href="https://properstatus.com/">Network Status</a>&nbsp;&nbsp;
+
       </div>
     </div>
   </footer>
@@ -1138,6 +1150,20 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Domain Search -->
+  <script type="text/javascript"
+    src="https://secure.duoservers.com/tld-search/api-search.js?lang=en&store=linespace"></script>
+  <script type="text/javascript">
+    searchApiOptions = {
+      store: "linespace",
+      containerId: "topbar",
+      submitURL: "",
+      selectedTld: "com",
+      popupBox: true,
+      floatingBox: false
+    };
+  </script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
