--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,7 @@
   <script type="text/javascript">
     searchApiOptions = {
       store: "linespace",
-      containerId: "topbar",
+      containerId: "",
       submitURL: "",
       selectedTld: "com",
       popupBox: true,
