[ADD] Core web services

--- a/index.html
+++ b/index.html
@@ -152,9 +152,10 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="services/custom_software.html">Custom Software Development</a></h4>
-              <p class="description">Tailored web development, mobile app development, and desktop applications designed
-                to meet the unique needs of your organization.
+              <h4 class="title"><a href="services/custom_software.html">Domain Name Registration</a></h4>
+              <p class="description">
+                Get a new domain at a great price from over 50 extensions. Our Domains Manager makes it easy to manage,
+                update WHOIS details, redirect, transfer, and more—all in one place.
               </p>
             </div>
           </div>
@@ -162,75 +163,33 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="services/consulting_and_advisory.html">Consulting and Advisory</a></h4>
-              <p class="description">IT and software consulting services to optimize technology strategies and
-                organization processes, driving efficiency and growth.</p>
+              <h4 class="title"><a href="services/consulting_and_advisory.html">Cloud Hosting</a></h4>
+              <p class="description">Data security is our top priority. We use the ZFS storage system and automatically
+                enable the ModSecurity firewall to protect your sites. Our free web accelerator tools can boost your
+                website’s speed, and we’ll migrate your sites to our hosting platform at no extra cost.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="services/managed_services.html">Managed Services</a></h4>
-              <p class="description">Comprehensive IT support, cloud services, and network management to ensure seamless
-                and secure operations of your organization.</p>
+              <h4 class="title"><a href="services/managed_services.html">VPS Hosting</a></h4>
+              <p class="description">Grow your sites with a VPS server. Enjoy a variety of free addons and multiple
+                operating systems—all included in one great package.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="services/data_and_analytics.html">Data and Analytics</a></h4>
-              <p class="description">Advanced data analysis, big data solutions, and business intelligence services to
-                help you make data-driven decisions and gain valuable insights..</p>
+              <h4 class="title"><a href="services/data_and_analytics.html">Linux Dedicated Web Hosting</a></h4>
+              <p class="description">Our dedicated server packages set new standards in hosting. Choose Ubuntu, CentOS,
+                or
+                Debian at sign-up and get a free dedicated IP. Our custom internal network ensures a 99.9% uptime
+                guarantee.</p>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="services/digital_transformation.html">Digital Transformation</a></h4>
-              <p class="description">Strategic digital transformation solutions, including legacy system modernization
-                and enterprise software implementation, to enhance organization performance.</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="services/cybersecurity.html">Cybersecurity</a></h4>
-              <p class="description">Robust security audits, penetration testing, and compliance services to protect
-                client data and ensure regulatory compliance.</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="services/training_and_support.html">Training and Support</a></h4>
-              <p class="description">Technical and user training, along with comprehensive documentation services, to
-                empower organizations and ensure successful software adoption.</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="services/devops_and_cloud_infrastructure.html">DevOps and Cloud
-                  Infrastructure</a></h4>
-              <p class="description">Implementation of DevOps practices, cloud infrastructure management, and CI/CD
-                pipelines to streamline development and operations.</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="services/emerging_technologies.html">Emerging Technologies</a></h4>
-              <p class="description">AI and machine learning, IoT solutions, and blockchain development to provide
-                cutting-edge solutions for your complex challenges.</p>
-            </div>
-          </div>
           <!-- 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
