--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Linespace Software - Reliable solutions for complex organization challenges.</title>
+  <title>Linespace - Domain Name Registration, Cloud Hosting, VPS Hosting, Linux Dedicated Web Hosting, and more.
+  </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -79,15 +80,10 @@
           </li>
           <li class="dropdown"><a href="#featured-services"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="services/custom_software.html">Custom Software Development</a></li>
-              <li><a href="services/consulting_and_advisory.html">Consulting and Advisory</a></li>
-              <li><a href="services/managed_services.html">Managed Services</a></li>
-              <li><a href="services/data_and_analytics.html">Data and Analytics</a></li>
-              <li><a href="services/digital_transformation.html">Digital Transformation</a></li>
-              <li><a href="services/cybersecurity.html">Cybersecurity</a></li>
-              <li><a href="services/training_and_support.html">Training and Support</a></li>
-              <li><a href="services/devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></li>
-              <li><a href="services/emerging_technologies.html">Emerging Technologies</a></li>
+              <li><a href="services/#">Domain Name Registration</a></li>
+              <li><a href="services/#">Cloud Hosting</a></li>
+              <li><a href="services/#">VPS Hosting</a></li>
+              <li><a href="services/#">Linux Dedicated Web Hosting</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="open-source/open-source.html"><span>Open Source</span> <i
@@ -152,7 +148,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="services/custom_software.html">Domain Name Registration</a></h4>
+              <h4 class="title"><a href="services/#">Domain Name Registration</a></h4>
               <p class="description">
                 Get a new domain at a great price from over 50 extensions. Our Domains Manager makes it easy to manage,
                 update WHOIS details, redirect, transfer, and more—all in one place.
@@ -163,7 +159,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="services/consulting_and_advisory.html">Cloud Hosting</a></h4>
+              <h4 class="title"><a href="services/#">Cloud Hosting</a></h4>
               <p class="description">Data security is our top priority. We use the ZFS storage system and automatically
                 enable the ModSecurity firewall to protect your sites. Our free web accelerator tools can boost your
                 website’s speed, and we’ll migrate your sites to our hosting platform at no extra cost.</p>
@@ -227,9 +223,8 @@
                 <i class="bx bx-store-alt"></i>
                 <div>
                   <h5>Solutions</h5>
-                  <p>Our extensive range of software solutions includes custom software development, consulting and
-                    advisory, managed services, data and analytics, digital transformation, cybersecurity, training and
-                    support, devops and cloud Infrastructure, and emerging technologies. We leverage the latest
+                  <p>Our extensive range of software solutions includes domain name registration, cloud hosting, VPS
+                    hosting, Linux dedicated web hosting, and more. We leverage the latest
                     technologies to ensure our software is scalable, reliable, and secure, enabling organizations to
                     operate efficiently and effectively in the digital age.</p>
                 </div>
