--- a/index.html
+++ b/index.html
@@ -73,23 +73,12 @@
               <li><a href="services/exampad.html">Exampad</a></li>
             </ul>
           </li> -->
-          <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Gradebook</a></li>
-            </ul>
-          </li>
           <li class="dropdown"><a href="#featured-services"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="services/#">Domain Name Registration</a></li>
               <li><a href="services/#">Cloud Hosting</a></li>
               <li><a href="services/#">VPS Hosting</a></li>
               <li><a href="services/#">Linux Dedicated Web Hosting</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a href="open-source/open-source.html"><span>Open Source</span> <i
-                class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Rabbit</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto " href="#partners">Partners</a></li>
@@ -763,10 +752,8 @@
                   offer? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq1" class="collapse" data-bs-parent=".faq-list">
                   <p>
-                    Linespace offers a wide range of services, including custom software development, IT and software
-                    consulting, managed services, data and analytics, digital transformation, product development,
-                    cybersecurity, training and support, DevOps and cloud infrastructure, and emerging technologies such
-                    as AI, IoT, and blockchain.
+                    Linespace offers a wide range of services, including domain name registration, cloud hosting, VPS
+                    hosting, Linux dedicated web hosting, and more.
                   </p>
                 </div>
               </li>
@@ -826,34 +813,8 @@
                 <div id="faq6" class="collapse" data-bs-parent=".faq-list">
                   <p>
                     We prioritize data security and compliance by implementing robust security measures and conducting
-                    regular audits. Our cybersecurity services include penetration testing and ensuring compliance with
-                    data protection regulations such as GDPR and CCPA. </p>
-                </div>
-              </li>
-
-              <li>
-                <div data-bs-toggle="collapse" href="#faq7" class="collapsed question">What is your approach to custom
-                  software development?<i class="bi bi-chevron-down icon-show"></i><i
-                    class="bi bi-chevron-up icon-close"></i></div>
-                <div id="faq7" class="collapse" data-bs-parent=".faq-list">
-                  <p>
-                    Our custom software development process begins with understanding your unique requirements and
-                    goals. We then design, develop, and test the software, ensuring it meets your specifications and
-                    provides a seamless user experience.
-                  </p>
-                </div>
-              </li>
-
-              <li>
-                <div data-bs-toggle="collapse" href="#faq8" class="collapsed question">Can you help us implement DevOps
-                  practices?<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i>
-                </div>
-                <div id="faq8" class="collapse" data-bs-parent=".faq-list">
-                  <p>
-                    Yes, we offer DevOps services to streamline your development and operations processes. We can set up
-                    continuous integration and continuous delivery (CI/CD) pipelines and manage your cloud
-                    infrastructure to improve efficiency and collaboration.
-                  </p>
+                    regular audits. Our services include ensure compliance with data protection regulations such as GDPR
+                    and CCPA. </p>
                 </div>
               </li>
 
@@ -866,19 +827,6 @@
                     Yes, we offer technical and user training to ensure successful software adoption. Our training
                     sessions are designed to empower your team with the knowledge and skills needed to effectively use
                     our solutions.
-                  </p>
-                </div>
-              </li>
-
-              <li>
-                <div data-bs-toggle="collapse" href="#faq10" class="collapsed question">What emerging technologies do
-                  you work with?<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i>
-                </div>
-                <div id="faq10" class="collapse" data-bs-parent=".faq-list">
-                  <p>
-                    We have expertise in AI and machine learning, IoT solutions, and blockchain development. Our team
-                    stays updated with the latest technological advancements to provide innovative solutions for complex
-                    challenges.
                   </p>
                 </div>
               </li>
@@ -1007,6 +955,7 @@
               We are a web services company specialising in creating tailored software solutions to meet the unique
               needs of individuals, businesses, and organizations. Our mission is to empower our clients with
               cutting-edge technology and exceptional service.<br><br>
+              <strong>ID: </strong>321740<br />
               <strong>Email:</strong> <a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a><br>
               <strong>Eswatini:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a> | <a
                 href="tel:+268-7943-5667">+268-7943-5667</a><br>
@@ -1033,22 +982,14 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/custom_software.html">Custom Software
-                  Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/consulting_and_advisory.html">Consulting and
-                  Advisory</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/managed_services.html">Managed Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/data_and_analytics.html">Data and Analytics</a>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/#">Domain Name Registration</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/#">Cloud Hosting</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/#">VPS Hosting</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/#">Linux Dedicated Web
+                  Hosting</a>
               </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/digital_transformation.html">Digital
-                  Transformation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/cybersecurity.html">Cybersecurity</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/training_and_support.html">Training and
-                  Support</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/devops_and_cloud_infrastructure.html">DevOps and
-                  Cloud Infrastructure</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/emerging_technologies.html">Emerging
-                  Technologies</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/#">Web Builder</a>
+              </li>
             </ul>
           </div>
 
@@ -1113,7 +1054,7 @@
       store: "linespace",
       containerId: "",
       submitURL: "",
-      selectedTld: "com",
+      selectedTld: "net",
       popupBox: true,
       floatingBox: false
     };
